--- a/resource-graph-patterns/break-a-loop-additional-resource/def-k8s-service-account.yaml
+++ b/resource-graph-patterns/break-a-loop-additional-resource/def-k8s-service-account.yaml
@@ -7,7 +7,7 @@ entity:
     - app_id: example-break-a-loop-additional-resource
   driver_inputs:
     values:
-      role_arn: ${resources['config.sa-name-role-id'].outputs.role_arn}
+      role_arn: ${resources.aws-role.outputs.arn}
       sa_name: ${resources['config.sa-name-role-id'].outputs.sa_name}
       templates:
         outputs: |
