Added initContainers ResDef example

--- a/score/initcontainers/humanitec.score.yaml
+++ b/score/initcontainers/humanitec.score.yaml
@@ -5,5 +5,5 @@ spec:
   pod:
     initContainers:
     - name: init-myservice
-      image: busybox:1.28
+      image: busybox
       command: ['sh', '-c', "until nslookup myservice.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for myservice; sleep 2; done"]
