--- a/resource-definitions/k8s-cluster-git/runtime/gke-temporary-credentials-runtime.yaml
+++ b/resource-definitions/k8s-cluster-git/runtime/gke-temporary-credentials-runtime.yaml
@@ -1,13 +1,14 @@
-# Connect to a GKE cluster using temporary credentials defined via a Cloud Account
+# Connect to a GKE cluster to obtain runtime data in a GitOps setup
+# using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: gke-temporary-credentials
+  id: gke-temporary-credentials-runtime
 entity:
-  name: gke-temporary-credentials
+  name: gke-temporary-credentials-runtime
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "gcp-identity"
-  # which needs to be configured for your Organization.
+  # which needs to be configured for your Organization
   driver_account: gcp-temporary-creds
   driver_type: humanitec/k8s-cluster-gke
   driver_inputs:
@@ -22,4 +23,6 @@ entity:
       # for the cluster and the proper Agent Resource Definition to be matched.
       agent_url: "${resources['agent#agent'].outputs.url}"
   criteria:
+  # The runtime cluster Resource Definition needs to always match this exact res_id
+  # Specify other matching criteria according to your setup
   - res_id: k8s-cluster-runtime
