--- a/score/probes/score.http.yaml
+++ b/score/probes/score.http.yaml
@@ -4,7 +4,7 @@ metadata:
 
 containers:
   demo:
-    image: registry/my-image:1.0.0
+    image: .
     livenessProbe:
       httpGet:
         path: "/alive"
