--- a/score/resources/score.yaml
+++ b/score/resources/score.yaml
@@ -4,7 +4,8 @@ metadata:
 
 containers:
   demo:
-    image: registry/my-image:1.0.0
+    # Set by pipeline
+    image: .
     resources:
       limits:
         cpu: "0.250"
