--- a/score/route/score.yaml
+++ b/score/route/score.yaml
@@ -9,6 +9,7 @@ service:
       targetPort: 8080
 containers:
   webserver:
+    # Set by pipeline via humctl score deploy --image
     image: .
 resources:
   api-dns:
