--- a/score/resources/score.yaml
+++ b/score/resources/score.yaml
@@ -4,7 +4,7 @@ metadata:
 
 containers:
   demo:
-    # Set by pipeline
+    # Set by pipeline via humctl score deploy --image
     image: .
     resources:
       limits:
