--- a/score/shared-resource/score-frontend.yaml
+++ b/score/shared-resource/score-frontend.yaml
@@ -5,6 +5,7 @@ metadata:
 
 containers:
   frontend:
+    # Set by pipeline via humctl score deploy --image
     image: .
     variables:
       # Inject the DNS name of the backend service as an environment variable
