Moved example files to subfolder and added inline comments

--- a/resource-definitions/opentofu-container-runner-driver/credentials/agent.yaml
+++ b/resource-definitions/opentofu-container-runner-driver/credentials/agent.yaml
@@ -2,10 +2,10 @@
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: agent
+  id: agent-opentofu-container-runner
 entity:
   driver_type: humanitec/agent
-  name: agent
+  name: agent-opentofu-container-runner
   type: agent
   driver_inputs:
     values:
