--- a/resource-definitions/opentofu-container-runner-driver/credentials/s3.yaml
+++ b/resource-definitions/opentofu-container-runner-driver/credentials/s3.yaml
@@ -1,36 +1,41 @@
-# This Resource Definition specifies an `s3` Resource to be provisioned through Terraform code read from a private Git repository accessed via an SSH key.
+# This Resource Definition specifies an `s3` Resource to be provisioned through OpenTofu code read from a private Git repository accessed via a password or token.
 # The backend is defined via an inline file
-
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: my-s3-bucket
+  id: s3-opentofu-container-runner
 entity:
   name: S3 Bucket
   type: s3
   driver_type: humanitec/opentofu-container-runner
+  # The Cloud Account referenced here provides the variables used in the credentials_config property
   driver_account: my-aws-account
   driver_inputs:
     values:
       runner:
+        # Specify imagePullSecrets for pulling the runner image on the target cluster
         pod_template: |
           spec:
             imagePullSecrets:
               - name: ghcr-private-registry
+      # Pull OpenTofu code from this Git repository
       source:
         ref: refs/heads/main
         url: https://my-domain.com/my-org/my-repo.git
         username: my-git-handler
         path: path/to/s3
+      # Define variables for the OpenTofu code
       variables:
         bucket: ${context.app.id}-${context.env.id}
         region: eu-west-3
       credentials_config:
+        # These variables are provided by the Cloud Account referenced in the driver_account property
         environment:
           AWS_ACCESS_KEY_ID: AccessKeyId
           AWS_SECRET_ACCESS_KEY: SecretAccessKey
       use_default_backend: false
       files:
+        # Define the TF backend dynamically using the Resource GuResId
         backend.tf: |
           terraform {
             backend "s3" {
@@ -40,6 +45,7 @@ entity:
             }
           }
     secret_refs:
+      # Obtain the password for authenticating to the Git repository from a secret store
       source:
         password:
           store: my-store
