Removed blank lines for best display in the docs

--- a/resource-definitions/template-driver/volumes/volume-emptydir.yaml
+++ b/resource-definitions/template-driver/volumes/volume-emptydir.yaml
@@ -1,3 +1,4 @@
+# This Resource Definition uses the Template Driver to inject an emptyDir volume into the workload
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
