Adding options on separate vs. single ServiceAccount

--- a/resource-definitions/template-driver/serviceaccount/serviceaccount-k8ssa-def.yaml
+++ b/resource-definitions/template-driver/serviceaccount/serviceaccount-k8ssa-def.yaml
@@ -12,7 +12,9 @@ entity:
       res_id: ${context.res.id}
       templates:
         init: |
-          name: {{ index ( .driver.values.res_id | splitList "." ) 1 }}
+          res_id: {{ .driver.values.res_id }}
+          {{- $res_name := .driver.values.res_id | splitList "." | last }}
+          name: {{ $res_name | toRawJson }}
         outputs: |
           name: {{ .init.name }}
         manifests: |
@@ -23,3 +25,5 @@ entity:
               kind: ServiceAccount
               metadata:
                 name: {{ .init.name }}
+                annotations:
+                  hum-res: {{ .init.res_id }}
