--- a/resource-definitions/template-driver/serviceaccount/serviceaccount-workload-def.yaml
+++ b/resource-definitions/template-driver/serviceaccount/serviceaccount-workload-def.yaml
@@ -1,4 +1,5 @@
 # This Resource Definition adds a Kubernetes ServiceAccount to a Workload
+# Note the inline comments on adjusting the setup
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
@@ -14,4 +15,7 @@ entity:
           update: 
           - op: add
             path: /spec/serviceAccountName
+            # Option 1: separate ServiceAccount per workload. Using the current workload's ID by not specifying an ID
             value: ${resources.k8s-service-account.outputs.name}
+            # Option 2: single ServiceAccount for all workloads. Specifying a fixed ID, e.g. "ksa"
+            # value: ${resources.k8s-service-account#ksa.outputs.name}
