Showing static vs. dynamic secret store name

--- a/resource-definitions/template-driver/secret-store/base-env-secretstore.yaml
+++ b/resource-definitions/template-driver/secret-store/base-env-secretstore.yaml
@@ -18,7 +18,10 @@ entity:
               apiVersion: humanitec.io/v1alpha1
               kind: SecretStore
               metadata:
+                # Use this line for context-agnostic naming:
                 name: my-local-gsm
+                # Use this line instead for context-specific naming:
+                # name: ${context.app.id}-${context.env.id}
               spec:
                 # Configure the secret store according to its type
                 # This example shows a Google Cloud Secret Manager
